[gd_scene load_steps=14 format=2]

[ext_resource path="res://res/font_flappy.tres" type="DynamicFont" id=2]
[ext_resource path="res://res/font_pixel.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/font/Minecraft.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://res/new_theme.tres" type="Theme" id=5]
[ext_resource path="res://scenes/lvl_6_dialogs_titles/score_panel.gd" type="Script" id=7]
[ext_resource path="res://assets/flappy-bird-assets-master/icon_global_board.png" type="Texture" id=8]
[ext_resource path="res://assets/flappy-bird-assets-master/play_icon.png" type="Texture" id=9]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Control/MarginContainer/VBoxContainer/HBoxContainer/Button_redoo:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 423 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("..:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 67, 235 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("..:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "fadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("..:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 67, 235 ), Vector2( 67, 189.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "fadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 67, 189.5 ), Vector2( 67, 150 ) ]
}

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="InputEventAction" id=5]
action = "jump"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[node name="MarginContainer" type="MarginContainer"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.0
margin_top = -21.0
margin_right = 77.0
margin_bottom = 112.0
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../score_panel")
anims/RESET = SubResource( 3 )
anims/fadeIn = SubResource( 7 )
anims/fadeOut = SubResource( 8 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[node name="Panel" type="Panel" parent="."]
margin_right = 154.0
margin_bottom = 132.0
theme = ExtResource( 5 )

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
margin_right = 154.0
margin_bottom = 132.0

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer3"]
margin_right = 154.0
margin_bottom = 82.0

[node name="Label" type="Label" parent="VBoxContainer3/VBoxContainer2"]
margin_right = 154.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0.760784, 0.623529, 0.286275, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Score"
align = 2

[node name="score_label" type="Label" parent="VBoxContainer3/VBoxContainer2"]
margin_top = 20.0
margin_right = 154.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 2

[node name="Label3" type="Label" parent="VBoxContainer3/VBoxContainer2"]
margin_top = 43.0
margin_right = 154.0
margin_bottom = 59.0
custom_colors/font_color = Color( 0.760784, 0.623529, 0.286275, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Best"
align = 2

[node name="score_best" type="Label" parent="VBoxContainer3/VBoxContainer2"]
margin_top = 63.0
margin_right = 154.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 154.0
margin_bottom = 132.0
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 95.0
margin_right = 154.0
margin_bottom = 132.0

[node name="Button_score_board" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 49.0273
margin_bottom = 37.242
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
icon = ExtResource( 8 )

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 53.0
margin_right = 103.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="Button_redoo" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 107.0
margin_right = 154.027
margin_bottom = 37.242
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
disabled = true
shortcut = SubResource( 6 )
icon = ExtResource( 9 )

[node name="score_panel" type="Control" parent="."]
margin_right = 154.0
margin_bottom = 132.0
script = ExtResource( 7 )

[node name="Control" type="Control" parent="score_panel"]
margin_left = -1.0
margin_top = 423.0
margin_right = 39.0
margin_bottom = 463.0
__meta__ = {
"_edit_group_": true
}

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
margin_right = 154.0
margin_bottom = 132.0

[connection signal="animation_finished" from="AnimationPlayer" to="score_panel" method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="score_panel" method="_on_Timer_timeout"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button_score_board" to="score_panel" method="_on_Button_ok_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button_redoo" to="score_panel" method="_on_Button_redoo_pressed"]
